@@ -137,65 +137,6 @@
     return self;
 }
 
-- (BOOL)getPluginInfoFromBundleAndMIMEDictionary:(NSDictionary *)MIMETypes
-{
-    if (!bundle)
-        return NO;
-    
-    if (!MIMETypes) {
-        MIMETypes = [bundle objectForInfoDictionaryKey:WebPluginMIMETypesKey];
-        if (!MIMETypes)
-            return NO;
-    }
-
-    NSMutableDictionary *MIMEToExtensionsDictionary = [NSMutableDictionary dictionary];
-    NSMutableDictionary *MIMEToDescriptionDictionary = [NSMutableDictionary dictionary];
-    NSEnumerator *keyEnumerator = [MIMETypes keyEnumerator];
-    NSDictionary *MIMEDictionary;
-    NSString *MIME, *description;
-    NSArray *extensions;
-
-    while ((MIME = [keyEnumerator nextObject]) != nil) {
-        MIMEDictionary = [MIMETypes objectForKey:MIME];
-        
-        // FIXME: Consider storing disabled MIME types.
-        NSNumber *isEnabled = [MIMEDictionary objectForKey:WebPluginTypeEnabledKey];
-        if (isEnabled && [isEnabled boolValue] == NO)
-            continue;
-
-        extensions = [[MIMEDictionary objectForKey:WebPluginExtensionsKey] _web_lowercaseStrings];
-        if ([extensions count] == 0)
-            extensions = [NSArray arrayWithObject:@""];
-
-        MIME = [MIME lowercaseString];
-
-        [MIMEToExtensionsDictionary setObject:extensions forKey:MIME];
-
-        description = [MIMEDictionary objectForKey:WebPluginTypeDescriptionKey];
-        if (!description)
-            description = @"";
-
-        [MIMEToDescriptionDictionary setObject:description forKey:MIME];
-    }
-
-    [self setMIMEToExtensionsDictionary:MIMEToExtensionsDictionary];
-    [self setMIMEToDescriptionDictionary:MIMEToDescriptionDictionary];
-
-    NSString *filename = [self filename];
-
-    NSString *theName = [bundle objectForInfoDictionaryKey:WebPluginNameKey];
-    if (!theName)
-        theName = filename;
-    [self setName:theName];
-
-    description = [bundle objectForInfoDictionaryKey:WebPluginDescriptionKey];
-    if (!description)
-        description = filename;
-    [self setPluginDescription:description];
-
-    return YES;
-}
-
 - (void)unload
 {
 }
